tests/NormalTests/paczka1/small_fuzzy/27877059.err
Error in line 2: A586 A368 97,1
Error in line 8: SLR6 A368 37,1
